# create-push-subscription

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: build-docker-image.yml  python-ci.yml  release.yml  test_workflow.yml  update-pull-request.yml
create_push_subscription/: entrypoint.sh
