[tool.poetry]
name = "create-push-subscription"
version = "0.4.1.beta-0"
description = "A GitHub action that creates a Google Pub/Sub push subscription for an Octue service."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
octue = { git = "https://github.com/octue/octue-sdk-python", branch = "improve-ask-multiple" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
